RestaurantWebApp/src/app/customer-interface/customer-interface.component.sass
$background: #fdfdf3
$pure-gold: #dbc028
$gold-light: #e9c46a
$maroon: #3b0d0d
$teal: #388572

body
  background-image: url('../../assets/images/background.jpg')
  background-size: cover

.toolbar
  color: #264653
  background-color: #e9c46a
  border-radius: 3px

.mat-card
  max-width: 300px

.menu-item-price
  font-size: 13px
  color: $pure-gold

.menu-item-name
  font-family: 'Raleway', cursive
  font-size: 30px

.menu-item-description
  font-family: 'Raleway', sans-serif
  color: #0e0b00
  background-color: $background
  padding: 5px
  border-radius: 5px

.spacer
  flex: 1 1 auto

.menuUI
  font-size: 30px
  font-family: 'Calibri Light'
  height: 100%
  width: 100%

.menuTitle
  font-family: 'Cedarville Cursive', cursive
  color: $pure-gold
  text-shadow: 5px 5px 5px #565656

.card-actions
  padding: 10px

.selection-fab
  background-color: #388572
  font-family: 'Raleway', sans-serif
  color: #b9a239
  font-size: 20px

.an-2
  font-weight: 900
  font-size: 7vw

.action-button
  font-family: 'Raleway', sans-serif
  background-color: #388572
  color: #e9c46a
  font-size: 20px

.break-line
  border: 1px solid black
  margin-bottom: 10px

.mat-card-header
  padding: 0
  margin: 0
  height: 30px

.category
  font-size: 3vw
  font-family: 'Cedarville Cursive'
  color: #b9a239
  border-radius: 3px
  background-color: #388572
  width: 100%
  height: 100%
  text-align: center
  padding: 15px

.catRow
  height: 150px

.categoryTile:hover
  transform: translateY(-7px)
  transition: 0.2s

.basket
  background-color: #bbbbbbf2
  backdrop-filter: blur(4px)
  .badge
  padding-left: 9px
  padding-right: 9px
  -webkit-border-radius: 9px
  -moz-border-radius: 9px
  border-radius: 9px


.label-warning[href],
.badge-warning[href]
  background-color: #c67605

#lblCartCount
    font-size: 12px
    background-color: #388572
    color: #fff
    padding: 0 5px
    vertical-align: top
    margin-left: -10px

.menuCard
  width: 90%
  border-radius: 10px
  //border: 1px double #c3b228
  padding: 10px
  margin: 50px
  //box-shadow: 15px 15px 15px 5px #626260
  //background: rgb(253,253,243)
  //background: radial-gradient(circle, rgba(253,253,243,1) 0%, rgb(236, 232, 225) 100%)
  min-height: 100vh

.menuCard .innerBorder
  border-radius: 10px
  border: 1px dotted $teal

.categoryTitle
  font-size: 5vw
  font-family: 'Cedarville Cursive', cursive
  color: $gold-light

.helpBubble
  position: absolute
  bottom: 0
  right: 0

.callWaiterFloat
  position: fixed
  width: 80px
  height: 80px
  bottom: 40px
  right: 40px
  background-color: #0C9
  color: #FFF
  border-radius: 50px
  text-align: center
  box-shadow: 2px 2px 3px #999

.expansionPannel
  padding: 20px

